...
                                        contentDescription = modeLabel, modifier = Modifier.size(20.dp)
                                    )
                                }
                            }
                            TooltipBox(
                                positionProvider = TooltipDefaults.rememberTooltipPositionProvider(TooltipAnchorPosition.Above),
                                tooltip = { PlainTooltip { Text("确定") } }, state = rememberTooltipState()
                            ) {
                                FilledTonalIconButton(
                                    onClick = {
                                        if (enabled) state.selectedDateMillis?.let {
                                            focusManager.clearFocus()
                                            keyboard?.hide()
...
